@@ -1,0 +1,11 @@
+(source gnu)
+(source melpa)
+
+(package-file "fancy-yank.el")
+
+(files "fancy-yank*.el")
+
+(development
+ (depends-on "el-mock")
+ (depends-on "ert-runner")
+ (depends-on "undercover"))
